charts/adhoc-knative-cfg/v0.1.0/templates/knative_serving.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: knative-serving
