charts/adhoc-knative-cfg/v0.1.0/templates/gw_customers.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: knative-customers-gateway
  namespace: istio-system
  labels:
    custom.knative.dev/gateway: customers
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: placeholder  # cert-manager injects the secret here dynamically
        minProtocolVersion: TLSV1_2
      hosts:
        - "*"
